; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sh/boards/mach-se/7343/extr_irq.c_enable_se7343_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sh/boards/mach-se/7343/extr_irq.c_enable_se7343_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SE7343_FPGA_IRQ_BASE = common dso_local global i32 0, align 4
@PA_CPLD_IMSK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @enable_se7343_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enable_se7343_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @SE7343_FPGA_IRQ_BASE, align 4
  %6 = sub i32 %4, %5
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @PA_CPLD_IMSK, align 4
  %8 = call i32 @ctrl_inw(i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = shl i32 1, %9
  %11 = xor i32 %10, -1
  %12 = and i32 %8, %11
  %13 = load i32, i32* @PA_CPLD_IMSK, align 4
  %14 = call i32 @ctrl_outw(i32 %12, i32 %13)
  ret void
}

declare dso_local i32 @ctrl_outw(i32, i32) #1

declare dso_local i32 @ctrl_inw(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
